syntax = "proto3";

option csharp_namespace = "ApplicationLayer.gRPC";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc AddUser(AddUserRequest) returns (AddUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUserRequest {
  int32 Id = 1;
}

message GetUserResponse {
  User user = 1;
}

message AddUserRequest {
  User user = 1;
}

message AddUserResponse {
  bool success = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  bool success = 1;
}

message DeleteUserRequest {
  int32 Id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message User {
  int32 Id = 1;
  string nationalCode = 2;
  string firstName = 3;
  string lastName = 4;
  string birthDate = 5;
}